kadke-sports/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kadke
  labels:
    name: kadke
    environment: production
